--- a/styles/footer.css
+++ b/styles/footer.css
@@ -57,3 +57,23 @@
     letter-spacing: 0%;
     color: #404040;
 }
+
+@media (max-width: 768px) {
+    .footer__top {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+    .footer__navigation-menu {
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer__socials {
+        margin-top: 20px;
+    }
+    .footer__bottom {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+}
